<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/chipszam"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/chipszam"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <EditText
        android:id="@+id/kutyanev"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/kutyanev"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/fajta"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/fajta"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/tulaj"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/tulaj"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="264dp"
        android:layout_height="348dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926">

        <Button
            android:id="@+id/mentesGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/mentes" />

        <Button
            android:id="@+id/betoltGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/betoltes" />

        <Button
            android:id="@+id/fajlbaMentGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/fajlbaMentes" />

        <Button
            android:id="@+id/loadFromServerGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/server_betoltes_gomb" />

        <Button
            android:id="@+id/loadFromServerByChipszamGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/server_betoltes_chipszam_gomb" />

        <Button
            android:id="@+id/saveToServerGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/server_mentes_gomb" />

        <Button
            android:id="@+id/autokfromwebGomb"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="web" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:layout_marginBottom="19dp"
        android:text="@string/cim"
        android:textAlignment="center"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/actualLanguageZaszlo"
        android:layout_width="39dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="@drawable/zaszlo" />

    <TextView
        android:id="@+id/actualLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actuallanguage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />


</androidx.constraintlayout.widget.ConstraintLayout>